Minh/EF cho reward + Discipline

--- a/CompanyHRManagement.csproj
+++ b/CompanyHRManagement.csproj
@@ -169,8 +169,10 @@
       <DependentUpon>CompanyHR_Model.tt</DependentUpon>
     </Compile>
     <None Include="DTO\Readme.md" />
+    <Compile Include="DTO\DisciplineDTO.cs" />
     <Compile Include="DTO\MesageReceive.cs" />
     <Compile Include="DTO\MessageSend.cs" />
+    <Compile Include="DTO\RewardDTO.cs" />
     <Compile Include="DTO\SalaryDTO.cs" />
     <Compile Include="Employee.cs">
       <DependentUpon>CompanyHR_Model.tt</DependentUpon>
